# pymicrodxp

./: .gitignore  LICENSE  README.md  README_DEV.md  pyproject.toml  pytest.ini  release.py
examples/custom_extension/: README.md  conftest.py  main.py
examples/custom_extension/extension/: __init__.py  commands.py  shell.py
examples/custom_extension/tests/: test_example.py
src/pymicrodxp/: __init__.py  cli.py  driver.py
src/pymicrodxp/commands/: __init__.py  diagnostic.py  peripheral.py  run_control.py  spectrometer_control.py  status.py
src/pymicrodxp/core/: __init__.py  error.py  logging.py  protocol.py  registry.py  transport.py  utils.py
src/pymicrodxp/shell/: __init__.py  cli_utils.py  diagnostic.py  peripheral.py  qc.py  run_control.py  spectrometer_control.py  status.py  visualization.py
tests/: test_base.py  test_diagnostic.py  test_driver.py  test_error.py  test_peripheral.py  test_protocol.py  test_run_control.py  test_serial.py  test_shell.py  test_spectrometer_control.py  test_status.py  test_transport.py  test_usb.py
